fix(property-table-desktop): too much space in closed accordion

--- a/packages/web/src/app/shared/component-documentation/component-properties-table/property-table-desktop/property-table-desktop.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/property-table-desktop/property-table-desktop.component.scss
@@ -73,6 +73,10 @@ tr.prop-row {
   &:not(.last) .height-changer {
     border-bottom: 1px solid var(--e-color-border-2);
   }
+
+  &:not(.expanded) .height-changer {
+    border: none;
+  }
 }
 
 .height-changer {
